Update from https://github.com/thebesttv/eserver-static/commit/26d23557f360251b2b21870290fc8099ebd83fb7

--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-05 02:41 -->
+<!-- 2022-12-05 21:09 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,48 +46,48 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgaf5c33e">1. 妙妙文章</a>
+<li><a href="#orgadf5b8f">1. 妙妙文章</a>
 <ul>
-<li><a href="#org20318cc">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#org486e262">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org101119e">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org645634b">1.4. 关于编辑器</a></li>
-<li><a href="#orgd323d21">1.5. 关于代码</a>
+<li><a href="#org27a0077">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#orge4caa92">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#orgae1606d">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org1844c94">1.4. 关于编辑器</a></li>
+<li><a href="#org0e4edd7">1.5. 关于代码</a>
 <ul>
-<li><a href="#org7cfb748">1.5.1. Lisp</a></li>
+<li><a href="#org4a47494">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org9412854">1.6. 关于CPU</a></li>
-<li><a href="#org110a3af">1.7. 关于算法</a>
+<li><a href="#org61de1df">1.6. 关于CPU</a></li>
+<li><a href="#org2dfe925">1.7. 关于算法</a>
 <ul>
-<li><a href="#org1142fb4">1.7.1. 关于随机</a></li>
+<li><a href="#org5c09958">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org11c2ff7">1.8. 关于AI</a></li>
-<li><a href="#orgfa895a7">1.9. 关于软件</a>
+<li><a href="#org8adcde6">1.8. 关于AI</a></li>
+<li><a href="#orga65a06a">1.9. 关于软件</a>
 <ul>
-<li><a href="#org690599e">1.9.1. SQLite</a></li>
+<li><a href="#org1f53c0e">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org3198922">1.10. 关于workflow</a></li>
+<li><a href="#orgc5cffd8">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#orgb915258">2. 棒棒视频</a>
+<li><a href="#org7bfc0f4">2. 棒棒视频</a>
 <ul>
-<li><a href="#org75edbb2">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org175c18e">2.2. 迷因水母</a></li>
-<li><a href="#org85692cb">2.3. 各种剧</a></li>
-<li><a href="#orgf402ffd">2.4. 电影</a></li>
+<li><a href="#orgf9dfa39">2.1. Veritasium 真理元素</a></li>
+<li><a href="#orga773ad8">2.2. 迷因水母</a></li>
+<li><a href="#org95368fa">2.3. 各种剧</a></li>
+<li><a href="#orgeb771be">2.4. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org8b33ea2">3. 快乐游戏</a></li>
-<li><a href="#orgd62ec58">4. 宝藏博主</a></li>
-<li><a href="#orgb7a7f47">5. 有意思的</a>
+<li><a href="#orgad887ee">3. 快乐游戏</a></li>
+<li><a href="#orgeacb403">4. 宝藏博主</a></li>
+<li><a href="#org3b8b639">5. 有意思的</a>
 <ul>
-<li><a href="#orgca158b1">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#orgfbad810">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#orgb8bcdb0">6. 我想玩的</a></li>
+<li><a href="#org4ba2566">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -96,8 +96,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-orgaf5c33e" class="outline-2">
-<h2 id="orgaf5c33e"><span class="section-number-2">1.</span> <a href="#orgaf5c33e">妙妙文章</a></h2>
+<div id="outline-container-orgadf5b8f" class="outline-2">
+<h2 id="orgadf5b8f"><span class="section-number-2">1.</span> <a href="#orgadf5b8f">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -432,7 +432,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org78876e6">
+<figure id="org4b273c3">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -505,8 +505,8 @@ Shoot for simplicity and legibility, but keep your distinguishing features.
 </ul>
 </div>
 
-<div id="outline-container-org20318cc" class="outline-3">
-<h3 id="org20318cc"><span class="section-number-3">1.1.</span> <a href="#org20318cc">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-org27a0077" class="outline-3">
+<h3 id="org27a0077"><span class="section-number-3">1.1.</span> <a href="#org27a0077">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -547,8 +547,8 @@ Shoot for simplicity and legibility, but keep your distinguishing features.
 </div>
 </div>
 
-<div id="outline-container-org486e262" class="outline-3">
-<h3 id="org486e262"><span class="section-number-3">1.2.</span> <a href="#org486e262">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-orge4caa92" class="outline-3">
+<h3 id="orge4caa92"><span class="section-number-3">1.2.</span> <a href="#orge4caa92">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -582,8 +582,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org101119e" class="outline-3">
-<h3 id="org101119e"><span class="section-number-3">1.3.</span> <a href="#org101119e">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-orgae1606d" class="outline-3">
+<h3 id="orgae1606d"><span class="section-number-3">1.3.</span> <a href="#orgae1606d">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -617,8 +617,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org645634b" class="outline-3">
-<h3 id="org645634b"><span class="section-number-3">1.4.</span> <a href="#org645634b">关于编辑器</a></h3>
+<div id="outline-container-org1844c94" class="outline-3">
+<h3 id="org1844c94"><span class="section-number-3">1.4.</span> <a href="#org1844c94">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -634,8 +634,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-orgd323d21" class="outline-3">
-<h3 id="orgd323d21"><span class="section-number-3">1.5.</span> <a href="#orgd323d21">关于代码</a></h3>
+<div id="outline-container-org0e4edd7" class="outline-3">
+<h3 id="org0e4edd7"><span class="section-number-3">1.5.</span> <a href="#org0e4edd7">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -660,8 +660,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-org7cfb748" class="outline-4">
-<h4 id="org7cfb748"><span class="section-number-4">1.5.1.</span> <a href="#org7cfb748">Lisp</a></h4>
+<div id="outline-container-org4a47494" class="outline-4">
+<h4 id="org4a47494"><span class="section-number-4">1.5.1.</span> <a href="#org4a47494">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -684,8 +684,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org9412854" class="outline-3">
-<h3 id="org9412854"><span class="section-number-3">1.6.</span> <a href="#org9412854">关于CPU</a></h3>
+<div id="outline-container-org61de1df" class="outline-3">
+<h3 id="org61de1df"><span class="section-number-3">1.6.</span> <a href="#org61de1df">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -700,8 +700,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-org110a3af" class="outline-3">
-<h3 id="org110a3af"><span class="section-number-3">1.7.</span> <a href="#org110a3af">关于算法</a></h3>
+<div id="outline-container-org2dfe925" class="outline-3">
+<h3 id="org2dfe925"><span class="section-number-3">1.7.</span> <a href="#org2dfe925">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -720,8 +720,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org1142fb4" class="outline-4">
-<h4 id="org1142fb4"><span class="section-number-4">1.7.1.</span> <a href="#org1142fb4">关于随机</a></h4>
+<div id="outline-container-org5c09958" class="outline-4">
+<h4 id="org5c09958"><span class="section-number-4">1.7.1.</span> <a href="#org5c09958">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -735,8 +735,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org11c2ff7" class="outline-3">
-<h3 id="org11c2ff7"><span class="section-number-3">1.8.</span> <a href="#org11c2ff7">关于AI</a></h3>
+<div id="outline-container-org8adcde6" class="outline-3">
+<h3 id="org8adcde6"><span class="section-number-3">1.8.</span> <a href="#org8adcde6">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -746,8 +746,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgfa895a7" class="outline-3">
-<h3 id="orgfa895a7"><span class="section-number-3">1.9.</span> <a href="#orgfa895a7">关于软件</a></h3>
+<div id="outline-container-orga65a06a" class="outline-3">
+<h3 id="orga65a06a"><span class="section-number-3">1.9.</span> <a href="#orga65a06a">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -758,8 +758,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org690599e" class="outline-4">
-<h4 id="org690599e"><span class="section-number-4">1.9.1.</span> <a href="#org690599e">SQLite</a></h4>
+<div id="outline-container-org1f53c0e" class="outline-4">
+<h4 id="org1f53c0e"><span class="section-number-4">1.9.1.</span> <a href="#org1f53c0e">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -773,8 +773,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org3198922" class="outline-3">
-<h3 id="org3198922"><span class="section-number-3">1.10.</span> <a href="#org3198922">关于workflow</a></h3>
+<div id="outline-container-orgc5cffd8" class="outline-3">
+<h3 id="orgc5cffd8"><span class="section-number-3">1.10.</span> <a href="#orgc5cffd8">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -784,8 +784,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgb915258" class="outline-2">
-<h2 id="orgb915258"><span class="section-number-2">2.</span> <a href="#orgb915258">棒棒视频</a></h2>
+<div id="outline-container-org7bfc0f4" class="outline-2">
+<h2 id="org7bfc0f4"><span class="section-number-2">2.</span> <a href="#org7bfc0f4">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -844,8 +844,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org75edbb2" class="outline-3">
-<h3 id="org75edbb2"><span class="section-number-3">2.1.</span> <a href="#org75edbb2">Veritasium 真理元素</a></h3>
+<div id="outline-container-orgf9dfa39" class="outline-3">
+<h3 id="orgf9dfa39"><span class="section-number-3">2.1.</span> <a href="#orgf9dfa39">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -876,8 +876,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org175c18e" class="outline-3">
-<h3 id="org175c18e"><span class="section-number-3">2.2.</span> <a href="#org175c18e">迷因水母</a></h3>
+<div id="outline-container-orga773ad8" class="outline-3">
+<h3 id="orga773ad8"><span class="section-number-3">2.2.</span> <a href="#orga773ad8">迷因水母</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li><p>
@@ -892,8 +892,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org85692cb" class="outline-3">
-<h3 id="org85692cb"><span class="section-number-3">2.3.</span> <a href="#org85692cb">各种剧</a></h3>
+<div id="outline-container-org95368fa" class="outline-3">
+<h3 id="org95368fa"><span class="section-number-3">2.3.</span> <a href="#org95368fa">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -917,8 +917,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgf402ffd" class="outline-3">
-<h3 id="orgf402ffd"><span class="section-number-3">2.4.</span> <a href="#orgf402ffd">电影</a></h3>
+<div id="outline-container-orgeb771be" class="outline-3">
+<h3 id="orgeb771be"><span class="section-number-3">2.4.</span> <a href="#orgeb771be">电影</a></h3>
 <div class="outline-text-3" id="text-2-4">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -944,7 +944,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://movie.douban.com/subject/19899707/">驯龙高手3</a> (再见~)
 </p>
 
-<figure id="orgfeb6463">
+<figure id="org310bcbd">
 <img src="./index/dragon3.jpg" alt="dragon3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -962,8 +962,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org8b33ea2" class="outline-2">
-<h2 id="org8b33ea2"><span class="section-number-2">3.</span> <a href="#org8b33ea2">快乐游戏</a></h2>
+<div id="outline-container-orgad887ee" class="outline-2">
+<h2 id="orgad887ee"><span class="section-number-2">3.</span> <a href="#orgad887ee">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -993,8 +993,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgd62ec58" class="outline-2">
-<h2 id="orgd62ec58"><span class="section-number-2">4.</span> <a href="#orgd62ec58">宝藏博主</a></h2>
+<div id="outline-container-orgeacb403" class="outline-2">
+<h2 id="orgeacb403"><span class="section-number-2">4.</span> <a href="#orgeacb403">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -1005,7 +1005,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org3f462ff">
+<figure id="org9a7929d">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -1013,8 +1013,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgb7a7f47" class="outline-2">
-<h2 id="orgb7a7f47"><span class="section-number-2">5.</span> <a href="#orgb7a7f47">有意思的</a></h2>
+<div id="outline-container-org3b8b639" class="outline-2">
+<h2 id="org3b8b639"><span class="section-number-2">5.</span> <a href="#org3b8b639">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -1040,8 +1040,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-orgca158b1" class="outline-3">
-<h3 id="orgca158b1"><span class="section-number-3">5.1.</span> <a href="#orgca158b1">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-orgfbad810" class="outline-3">
+<h3 id="orgfbad810"><span class="section-number-3">5.1.</span> <a href="#orgfbad810">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1053,8 +1053,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-orgb8bcdb0" class="outline-2">
-<h2 id="orgb8bcdb0"><span class="section-number-2">6.</span> <a href="#orgb8bcdb0">我想玩的</a></h2>
+<div id="outline-container-org4ba2566" class="outline-2">
+<h2 id="org4ba2566"><span class="section-number-2">6.</span> <a href="#org4ba2566">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1077,7 +1077,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-02 20:41</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 02:41</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 21:09</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
