--- a/content/linux/vectored-io.html
+++ b/content/linux/vectored-io.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-05 02:41 -->
+<!-- 2022-12-05 21:09 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Vectored IO</title>
@@ -46,13 +46,13 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org65743b6">1. What is Vectored IO</a></li>
-<li><a href="#org35c377d">2. Vectored IO in Linux</a></li>
-<li><a href="#org9a31f32">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
-<li><a href="#org434563f">4. Examples</a>
+<li><a href="#org01daa0c">1. What is Vectored IO</a></li>
+<li><a href="#orgec7c5e8">2. Vectored IO in Linux</a></li>
+<li><a href="#org615a362">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
+<li><a href="#orgbf25929">4. Examples</a>
 <ul>
-<li><a href="#orgee3ef1f">4.1. <code>write()</code></a></li>
-<li><a href="#org3b7087e">4.2. <code>writev()</code></a></li>
+<li><a href="#org048385f">4.1. <code>write()</code></a></li>
+<li><a href="#org28b4ed5">4.2. <code>writev()</code></a></li>
 </ul>
 </li>
 </ul>
@@ -68,8 +68,8 @@
 <li><a href="https://www.oreilly.com/library/view/linux-system-programming/0596009585/ch04.html#:~:text=fun%20to%20implement.-,readv(%20)%20and%20writev(%20),-POSIX%201003.1%2D2001">Chapter 4. Advanced File I/O &#x2014; Linux System Programming by Robert Love</a></li>
 </ul>
 
-<div id="outline-container-org65743b6" class="outline-2">
-<h2 id="org65743b6"><span class="section-number-2">1.</span> <a href="#org65743b6">What is Vectored IO</a></h2>
+<div id="outline-container-org01daa0c" class="outline-2">
+<h2 id="org01daa0c"><span class="section-number-2">1.</span> <a href="#org01daa0c">What is Vectored IO</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 <i>Vectored IO</i> is doing IO with <b>a vector of buffers</b>, instead of using
@@ -80,8 +80,8 @@ set of buffers.
 </div>
 </div>
 
-<div id="outline-container-org35c377d" class="outline-2">
-<h2 id="org35c377d"><span class="section-number-2">2.</span> <a href="#org35c377d">Vectored IO in Linux</a></h2>
+<div id="outline-container-orgec7c5e8" class="outline-2">
+<h2 id="orgec7c5e8"><span class="section-number-2">2.</span> <a href="#orgec7c5e8">Vectored IO in Linux</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 <code>readv()</code> (scatter input) and <code>writev()</code> (gather output) are Linux
@@ -119,8 +119,8 @@ Each buffer in the <code>iov</code> array is a <code>struct iovec</code>:
 </div>
 </div>
 
-<div id="outline-container-org9a31f32" class="outline-2">
-<h2 id="org9a31f32"><span class="section-number-2">3.</span> <a href="#org9a31f32">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
+<div id="outline-container-org615a362" class="outline-2">
+<h2 id="org615a362"><span class="section-number-2">3.</span> <a href="#org615a362">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Traditional <code>read()</code> and <code>write()</code> functions have similar signatures
@@ -137,12 +137,12 @@ only read from <code>buf</code>).
 </div>
 </div>
 
-<div id="outline-container-org434563f" class="outline-2">
-<h2 id="org434563f"><span class="section-number-2">4.</span> <a href="#org434563f">Examples</a></h2>
+<div id="outline-container-orgbf25929" class="outline-2">
+<h2 id="orgbf25929"><span class="section-number-2">4.</span> <a href="#orgbf25929">Examples</a></h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-orgee3ef1f" class="outline-3">
-<h3 id="orgee3ef1f"><span class="section-number-3">4.1.</span> <a href="#orgee3ef1f"><code>write()</code></a></h3>
+<div id="outline-container-org048385f" class="outline-3">
+<h3 id="org048385f"><span class="section-number-3">4.1.</span> <a href="#org048385f"><code>write()</code></a></h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 Printing a message to stdout with <code>write()</code>:
@@ -165,8 +165,8 @@ Printing a message to stdout with <code>write()</code>:
 </div>
 </div>
 
-<div id="outline-container-org3b7087e" class="outline-3">
-<h3 id="org3b7087e"><span class="section-number-3">4.2.</span> <a href="#org3b7087e"><code>writev()</code></a></h3>
+<div id="outline-container-org28b4ed5" class="outline-3">
+<h3 id="org28b4ed5"><span class="section-number-3">4.2.</span> <a href="#org28b4ed5"><code>writev()</code></a></h3>
 <div class="outline-text-3" id="text-4-2">
 <p>
 Splitting the message into 3 separate buffers and printing them to
@@ -207,7 +207,7 @@ stdout with <code>writev()</code>:
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-10-22 16:07</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-22 17:06</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 02:41</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 21:09</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/linux/vectored-io.org">content/linux/vectored-io.org</a></td></tr>
 </table>
