--- a/content/emacs/org-hyperlink.html
+++ b/content/emacs/org-hyperlink.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-05 02:41 -->
+<!-- 2022-12-05 21:09 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Org-mode Hyperlinks</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org63ec764">1. URLs</a>
+<li><a href="#orgc6ccdc8">1. URLs</a>
 <ul>
-<li><a href="#orgfd0420d">1.1. Info</a></li>
+<li><a href="#org5cb653d">1.1. Info</a></li>
 </ul>
 </li>
 <li><a href="#hlinks">2. Headings</a></li>
-<li><a href="#org362664f">3. Files</a></li>
-<li><a href="#org47c793b">4. Named Elements</a></li>
-<li><a href="#orgc97f00a">5. Dedicated Targets</a></li>
-<li><a href="#org73bb72b">6. Radio Targets</a></li>
+<li><a href="#orgb334e52">3. Files</a></li>
+<li><a href="#orga65e212">4. Named Elements</a></li>
+<li><a href="#orga7b1916">5. Dedicated Targets</a></li>
+<li><a href="#org4a322a2">6. Radio Targets</a></li>
 <li><a href="#example-section">7. Something to Refer to</a>
 <ul>
-<li><a href="#org8632f8b">7.1. A sub-section</a></li>
+<li><a href="#org1ac4918">7.1. A sub-section</a></li>
 </ul>
 </li>
 </ul>
@@ -66,12 +66,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org63ec764" class="outline-2">
-<h2 id="org63ec764"><span class="section-number-2">1.</span> <a href="#org63ec764">URLs</a></h2>
+<div id="outline-container-orgc6ccdc8" class="outline-2">
+<h2 id="orgc6ccdc8"><span class="section-number-2">1.</span> <a href="#orgc6ccdc8">URLs</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orgfd0420d" class="outline-3">
-<h3 id="orgfd0420d"><span class="section-number-3">1.1.</span> <a href="#orgfd0420d">Info</a></h3>
+<div id="outline-container-org5cb653d" class="outline-3">
+<h3 id="org5cb653d"><span class="section-number-3">1.1.</span> <a href="#org5cb653d">Info</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 Use the <code>info</code> link type to link to an Info manual or a specific node. <br>
@@ -113,8 +113,8 @@ Use <code>[[* Headings]]</code> to directly refer to the name of a heading.  Not
 that there's only one asterisk (<code>*</code>), no matter how deep the heading is.
 </p>
 <p class="verse">
-<code>see Section [[* Named Elements]]</code> &rarr; see Section <a href="#org47c793b">4</a>;<br>
-<code>see the [[* A sub-section][sub-section]]</code> &rarr; see the <a href="#org8632f8b">sub-section</a>.<br>
+<code>see Section [[* Named Elements]]</code> &rarr; see Section <a href="#orga65e212">4</a>;<br>
+<code>see the [[* A sub-section][sub-section]]</code> &rarr; see the <a href="#org1ac4918">sub-section</a>.<br>
 </p>
 
 <p>
@@ -123,8 +123,8 @@ Use <code>C-c C-o</code> to nevigate to the target, and <code>C-c &amp;</code> t
 </div>
 </div>
 
-<div id="outline-container-org362664f" class="outline-2">
-<h2 id="org362664f"><span class="section-number-2">3.</span> <a href="#org362664f">Files</a></h2>
+<div id="outline-container-orgb334e52" class="outline-2">
+<h2 id="orgb334e52"><span class="section-number-2">3.</span> <a href="#orgb334e52">Files</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 You can go to a specific line in a file with by appending <code>::N</code> at the
@@ -134,8 +134,8 @@ can't be exported to HTML.
 </div>
 </div>
 
-<div id="outline-container-org47c793b" class="outline-2">
-<h2 id="org47c793b"><span class="section-number-2">4.</span> <a href="#org47c793b">Named Elements</a></h2>
+<div id="outline-container-orga65e212" class="outline-2">
+<h2 id="orga65e212"><span class="section-number-2">4.</span> <a href="#orga65e212">Named Elements</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Elements can be given a name:
@@ -163,7 +163,7 @@ Three main elements that can be named:
 
 <p>
 You can refer to named elements using <code>[[named source block]]</code>, e.g.
-Fig. <a href="#orgda54026">1</a>, Listing <a href="#org8fa978f">1</a>, and Table <a href="#orgd9215a3">1</a>.
+Fig. <a href="#org6dbe042">1</a>, Listing <a href="#orgd51c739">1</a>, and Table <a href="#org98c55b5">1</a>.
 </p>
 
 <p>
@@ -180,24 +180,24 @@ order to get proper numbering.
 </div>
 </div>
 
-<div id="outline-container-orgc97f00a" class="outline-2">
-<h2 id="orgc97f00a"><span class="section-number-2">5.</span> <a href="#orgc97f00a">Dedicated Targets</a></h2>
+<div id="outline-container-orga7b1916" class="outline-2">
+<h2 id="orga7b1916"><span class="section-number-2">5.</span> <a href="#orga7b1916">Dedicated Targets</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 Dedicated targets can be used to refer to a paragraph or an item in a
 list.
 </p>
 <ul class="org-ul">
-<li>paragraph: <code>[[target][prefixed sentence]]</code> &rarr; <a href="#org5e0532b">prefixed sentence</a></li>
+<li>paragraph: <code>[[target][prefixed sentence]]</code> &rarr; <a href="#orgae52701">prefixed sentence</a></li>
 <li>unordered list:  <code>the [[unordered target]]^th in the list</code> &rarr;
-the <a href="#org41b5fee">3</a><sup>th</sup> in the list</li>
-<li>ordered list: <code>[[ordered target][lalala]]</code> &rarr; <a href="#org7487360">lalala</a></li>
+the <a href="#orgf749457">3</a><sup>th</sup> in the list</li>
+<li>ordered list: <code>[[ordered target][lalala]]</code> &rarr; <a href="#orgbd3063d">lalala</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org73bb72b" class="outline-2">
-<h2 id="org73bb72b"><span class="section-number-2">6.</span> <a href="#org73bb72b">Radio Targets</a></h2>
+<div id="outline-container-org4a322a2" class="outline-2">
+<h2 id="org4a322a2"><span class="section-number-2">6.</span> <a href="#org4a322a2">Radio Targets</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 A radio target radiates its position.  It is enclosed in three angular
@@ -207,14 +207,14 @@ brackets, e.g. <code>&lt;&lt;&lt;thebesttv&gt;&gt;&gt;</code> and <code>&lt;&lt;
 
 <p>
 When a radio target is defined, any occurence of that word (or the
-words) in the document, e.g. <a href="#org359562f">thebesttv</a>, is automatically linked to the
+words) in the document, e.g. <a href="#org640bc61">thebesttv</a>, is automatically linked to the
 originating target.  This can be used for linking all the occurences of
-a terminology with its definition.  See the song of "<a href="#orgbbf4cfd">do re me</a>".
+a terminology with its definition.  See the song of "<a href="#org76be1e4">do re me</a>".
 </p>
 
 <p>
 See the manual: <a href="https://orgmode.org/manual/Radio-Targets.html">4.3 Radio Targets</a>.
-Again, <a href="#org359562f">thebesttv</a> and <a href="#orgbbf4cfd">do re me</a>.
+Again, <a href="#org640bc61">thebesttv</a> and <a href="#org76be1e4">do re me</a>.
 </p>
 </div>
 </div>
@@ -243,29 +243,29 @@ This word---&#8203;<span style="text-decoration: underline;">&lt;&lt;&lt;thebest
 </div>
 
 <p>
-<a id="org5e0532b"></a> This is a sentence prefixed with a <i>dedicated target</i>.
+<a id="orgae52701"></a> This is a sentence prefixed with a <i>dedicated target</i>.
 </p>
 
 <ul class="org-ul">
 <li>unordered list</li>
 <li>some item</li>
-<li><a id="org41b5fee"></a> target in an unordered list</li>
+<li><a id="orgf749457"></a> target in an unordered list</li>
 </ul>
 
 
 <ol class="org-ol">
 <li>ordered list</li>
-<li><a id="org7487360"></a> target in an ordered list</li>
+<li><a id="orgbd3063d"></a> target in an ordered list</li>
 </ol>
 
 <p>
-This word&#x2014;<a id="org359562f">thebesttv</a>&#x2014;is a radio target.
-<a id="orgbbf4cfd">Do re me</a>, a radio target, also a <a href="https://en.wikipedia.org/wiki/Do-Re-Mi">song</a>.
+This word&#x2014;<a id="org640bc61">thebesttv</a>&#x2014;is a radio target.
+<a id="org76be1e4">Do re me</a>, a radio target, also a <a href="https://en.wikipedia.org/wiki/Do-Re-Mi">song</a>.
 </p>
 </div>
 
-<div id="outline-container-org8632f8b" class="outline-3">
-<h3 id="org8632f8b"><span class="section-number-3">7.1.</span> <a href="#org8632f8b">A sub-section</a></h3>
+<div id="outline-container-org1ac4918" class="outline-3">
+<h3 id="org1ac4918"><span class="section-number-3">7.1.</span> <a href="#org1ac4918">A sub-section</a></h3>
 <div class="outline-text-3" id="text-7-1">
 <div class="org-src-container">
 <pre class="src src-org"><span style="text-decoration: underline;">{{{image(50)}}}</span>
@@ -290,20 +290,20 @@ This word&#x2014;<a id="org359562f">thebesttv</a>&#x2014;is a radio target.
 </div>
 
 
-<figure id="orgda54026">
+<figure id="org6dbe042">
 <img src="../daily/2021-05-20/lights-3.jpg" alt="lights-3.jpg" width="50%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>sample image</figcaption>
 </figure>
 
 <div class="org-src-container">
-<label class="org-src-name"><span class="listing-number">&#20195;&#30721;1&nbsp; </span>sample code</label><pre class="src src-elisp" id="org8fa978f">(<span style="font-weight: bold;">let</span> ((x 2))
+<label class="org-src-name"><span class="listing-number">&#20195;&#30721;1&nbsp; </span>sample code</label><pre class="src src-elisp" id="orgd51c739">(<span style="font-weight: bold;">let</span> ((x 2))
   (coderef)
   (1+ x))
 </pre>
 </div>
 
-<table id="orgd9215a3">
+<table id="org98c55b5">
 <caption class="t-above"><span class="table-number">&#34920;1&nbsp;</span> sample table</caption>
 
 <colgroup>
@@ -338,10 +338,10 @@ This word&#x2014;<a id="org359562f">thebesttv</a>&#x2014;is a radio target.
 </div>
 <div id="postamble" class="status">
 <hr><table class="postamble">
-  <tr><td class="org-right">Author</td><td class="org-left"><a href="#org359562f">thebesttv</a></td></tr>
+  <tr><td class="org-right">Author</td><td class="org-left"><a href="#org640bc61">thebesttv</a></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-22 20:15</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-04 18:20</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 02:41</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 21:09</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/emacs/org-hyperlink.org">content/emacs/org-hyperlink.org</a></td></tr>
 </table>
