--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-05 02:41 -->
+<!-- 2022-12-05 21:09 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>小渴栈</title>
@@ -47,7 +47,7 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org3ea3c37">1. 文章列表</a></li>
+<li><a href="#orgdfd110e">1. 文章列表</a></li>
 </ul>
 </div>
 </nav>
@@ -57,18 +57,18 @@
 </p>
 
 <p>
-用 <a href="https://github.com/githubocto/repo-visualizer">repo-visualizer</a> 生成对 <a href="https://github.com/thebesttv/eserver-static">eserver-static</a> 的可视化, 如图 <a href="#org0426174">1</a> 所示.
+用 <a href="https://github.com/githubocto/repo-visualizer">repo-visualizer</a> 生成对 <a href="https://github.com/thebesttv/eserver-static">eserver-static</a> 的可视化, 如图 <a href="#org1bddc47">1</a> 所示.
 </p>
 
 
-<figure id="org0426174">
+<figure id="org1bddc47">
 <img src="./diagram.svg" alt="diagram.svg" class="org-svg" width="90%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>博客内容可视化</figcaption>
 </figure>
 
-<div id="outline-container-org3ea3c37" class="outline-2">
-<h2 id="org3ea3c37"><span class="section-number-2">1.</span> <a href="#org3ea3c37">文章列表</a></h2>
+<div id="outline-container-orgdfd110e" class="outline-2">
+<h2 id="orgdfd110e"><span class="section-number-2">1.</span> <a href="#orgdfd110e">文章列表</a></h2>
 <div class="outline-text-2" id="text-1">
 <div data-pagefind-ignore="all">
 <ul class="org-ul">
@@ -77,6 +77,21 @@
 <ul class="org-ul">
 <li><a href="content/qq-group-export.html">导出QQ群成员</a></li>
 <li><a href="content/gadgets.html">我的小玩意们</a></li>
+<li>daily
+<ul class="org-ul">
+<li><a href="content/daily/2022-10-10.html">念念不忘, 真的有回响吗?</a></li>
+<li><a href="content/daily/2022-09-28.html">保研回忆录</a></li>
+<li><a href="content/daily/my-2021.html">我的2021</a></li>
+<li><a href="content/daily/2021-12-02.html">写在回文日</a></li>
+<li><a href="content/daily/2021-11-21.html">急性咽炎 &amp; 系统工程</a></li>
+<li><a href="content/daily/2021-11-03.html">Abstraction &amp; ISA</a></li>
+<li><a href="content/daily/2021-10-24.html">不那么快乐的1024</a></li>
+<li><a href="content/daily/2021-05-23.html">不造写啥标题</a></li>
+<li><a href="content/daily/2021-05-22.html">仿佛有点灰暗的一天</a></li>
+<li><a href="content/daily/2021-05-20.html">520快乐</a></li>
+<li><a href="content/daily/2021-05-19.html">不知道要写啥的第二篇日记</a></li>
+<li><a href="content/daily/2021-05-18.html">Hello, 博客</a></li>
+</ul></li>
 <li>emacs
 <ul class="org-ul">
 <li><a href="content/emacs/org-hyperlink.html">Org-mode Hyperlinks</a></li>
@@ -104,17 +119,6 @@
 <ul class="org-ul">
 <li><a href="content/linux/vectored-io.html">Vectored IO</a></li>
 </ul></li>
-<li>daily
-<ul class="org-ul">
-<li><a href="content/daily/2022-10-10.html">念念不忘, 真的有回响吗?</a></li>
-<li><a href="content/daily/2022-09-28.html">保研回忆录</a></li>
-<li><a href="content/daily/my-2021.html">我的2021</a></li>
-<li><a href="content/daily/2021-05-23.html">不造写啥标题</a></li>
-<li><a href="content/daily/2021-05-22.html">仿佛有点灰暗的一天</a></li>
-<li><a href="content/daily/2021-05-20.html">520快乐</a></li>
-<li><a href="content/daily/2021-05-19.html">不知道要写啥的第二篇日记</a></li>
-<li><a href="content/daily/2021-05-18.html">Hello, 博客</a></li>
-</ul></li>
 </ul></li>
 </ul>
 </div>
@@ -126,7 +130,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-25 09:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-27 21:44</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 02:41</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 21:09</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/index.org">index.org</a></td></tr>
 </table>
