--- a/content/daily/2021-05-23.html
+++ b/content/daily/2021-05-23.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-05 21:09 -->
+<!-- 2022-12-05 21:20 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不造写啥标题</title>
@@ -46,12 +46,12 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org88ac6c7">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
+<li><a href="#orgd29db40">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
 <ul>
-<li><a href="#org1ba4ce7">1.1. window config &amp; register</a></li>
-<li><a href="#orgc31ba3f">1.2. <code>C-x 4</code> prefix</a></li>
-<li><a href="#org95ab3cc">1.3. ace-window - Quickly switch windows in Emacs</a></li>
-<li><a href="#orgd8cf075">1.4. winner-mode - Undo &amp; redo window changes</a></li>
+<li><a href="#org4a59352">1.1. window config &amp; register</a></li>
+<li><a href="#org46369ef">1.2. <code>C-x 4</code> prefix</a></li>
+<li><a href="#orge1da572">1.3. ace-window - Quickly switch windows in Emacs</a></li>
+<li><a href="#org32bf653">1.4. winner-mode - Undo &amp; redo window changes</a></li>
 </ul>
 </li>
 </ul>
@@ -59,12 +59,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org88ac6c7" class="outline-2">
-<h2 id="org88ac6c7"><span class="section-number-2">1.</span> <a href="#org88ac6c7">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
+<div id="outline-container-orgd29db40" class="outline-2">
+<h2 id="orgd29db40"><span class="section-number-2">1.</span> <a href="#orgd29db40">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org1ba4ce7" class="outline-3">
-<h3 id="org1ba4ce7"><span class="section-number-3">1.1.</span> <a href="#org1ba4ce7">window config &amp; register</a></h3>
+<div id="outline-container-org4a59352" class="outline-3">
+<h3 id="org4a59352"><span class="section-number-3">1.1.</span> <a href="#org4a59352">window config &amp; register</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <dl class="org-dl">
 <dt><code>C-x r w</code> (<code>window-configuration-to-register</code>)</dt><dd>Store the window
@@ -78,8 +78,8 @@ restore that frame or all frames accordingly.</dd>
 </div>
 </div>
 
-<div id="outline-container-orgc31ba3f" class="outline-3">
-<h3 id="orgc31ba3f"><span class="section-number-3">1.2.</span> <a href="#orgc31ba3f"><code>C-x 4</code> prefix</a></h3>
+<div id="outline-container-org46369ef" class="outline-3">
+<h3 id="org46369ef"><span class="section-number-3">1.2.</span> <a href="#org46369ef"><code>C-x 4</code> prefix</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <dl class="org-dl">
 <dt><code>C-x 4 f</code>, <code>C-x 4 C-f</code> (<code>find-file-other-window</code>)</dt><dd>Find file by
@@ -102,8 +102,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-org95ab3cc" class="outline-3">
-<h3 id="org95ab3cc"><span class="section-number-3">1.3.</span> <a href="#org95ab3cc"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
+<div id="outline-container-orge1da572" class="outline-3">
+<h3 id="orge1da572"><span class="section-number-3">1.3.</span> <a href="#orge1da572"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
 <div class="outline-text-3" id="text-1-3">
 <div class="org-src-container">
 <pre class="src src-elisp">(global-set-key (kbd <span style="font-style: italic;">"M-o"</span>) 'ace-window)
@@ -116,8 +116,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-orgd8cf075" class="outline-3">
-<h3 id="orgd8cf075"><span class="section-number-3">1.4.</span> <a href="#orgd8cf075"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
+<div id="outline-container-org32bf653" class="outline-3">
+<h3 id="org32bf653"><span class="section-number-3">1.4.</span> <a href="#org32bf653"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
 <div class="outline-text-3" id="text-1-4">
 <div class="org-src-container">
 <pre class="src src-elisp">(winner-mode +1)
@@ -136,7 +136,7 @@ log 有关系，8清楚。</dd>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-23 10:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 21:09</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 21:20</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-23.org">content/daily/2021-05-23.org</a></td></tr>
 </table>
