--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-05 21:09 -->
+<!-- 2022-12-05 21:20 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org8a7a2aa">1. 暑假</a>
+<li><a href="#org5ad4c4d">1. 暑假</a>
 <ul>
-<li><a href="#org1867ec4">1.1. 夏令营</a></li>
+<li><a href="#org5e4e0b0">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#org85e74d8">2. 打工</a></li>
-<li><a href="#org3651f17">3. 我的928</a>
+<li><a href="#orgcd8b6dd">2. 打工</a></li>
+<li><a href="#orgef290bf">3. 我的928</a>
 <ul>
-<li><a href="#orgdd4cbab">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org65c5349">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org62e5a88">4. 他们的928</a></li>
-<li><a href="#org22c908e">5. 总结</a></li>
+<li><a href="#org436a930">4. 他们的928</a></li>
+<li><a href="#org1151ec1">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="org9076df5">
+<figure id="orge6eb8bb">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org8a7a2aa" class="outline-2">
-<h2 id="org8a7a2aa"><span class="section-number-2">1.</span> <a href="#org8a7a2aa">暑假</a></h2>
+<div id="outline-container-org5ad4c4d" class="outline-2">
+<h2 id="org5ad4c4d"><span class="section-number-2">1.</span> <a href="#org5ad4c4d">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-org1867ec4" class="outline-3">
-<h3 id="org1867ec4"><span class="section-number-3">1.1.</span> <a href="#org1867ec4">夏令营</a></h3>
+<div id="outline-container-org5e4e0b0" class="outline-3">
+<h3 id="org5e4e0b0"><span class="section-number-3">1.1.</span> <a href="#org5e4e0b0">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-org85e74d8" class="outline-2">
-<h2 id="org85e74d8"><span class="section-number-2">2.</span> <a href="#org85e74d8">打工</a></h2>
+<div id="outline-container-orgcd8b6dd" class="outline-2">
+<h2 id="orgcd8b6dd"><span class="section-number-2">2.</span> <a href="#orgcd8b6dd">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org3651f17" class="outline-2">
-<h2 id="org3651f17"><span class="section-number-2">3.</span> <a href="#org3651f17">我的928</a></h2>
+<div id="outline-container-orgef290bf" class="outline-2">
+<h2 id="orgef290bf"><span class="section-number-2">3.</span> <a href="#orgef290bf">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-orgdd4cbab" class="outline-3">
-<h3 id="orgdd4cbab"><span class="section-number-3">3.1.</span> <a href="#orgdd4cbab">928演唱会(bushi</a></h3>
+<div id="outline-container-org65c5349" class="outline-3">
+<h3 id="org65c5349"><span class="section-number-3">3.1.</span> <a href="#org65c5349">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org3720dcf">
+<figure id="org8ee00c4">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgfd4e514">
+<figure id="org90a22e6">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org62e5a88" class="outline-2">
-<h2 id="org62e5a88"><span class="section-number-2">4.</span> <a href="#org62e5a88">他们的928</a></h2>
+<div id="outline-container-org436a930" class="outline-2">
+<h2 id="org436a930"><span class="section-number-2">4.</span> <a href="#org436a930">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org22c908e" class="outline-2">
-<h2 id="org22c908e"><span class="section-number-2">5.</span> <a href="#org22c908e">总结</a></h2>
+<div id="outline-container-org1151ec1" class="outline-2">
+<h2 id="org1151ec1"><span class="section-number-2">5.</span> <a href="#org1151ec1">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,7 +262,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 21:09</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 21:20</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
