--- a/content/collections/tools.html
+++ b/content/collections/tools.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-05 21:20 -->
+<!-- 2022-12-05 21:51 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>有用的工具</title>
@@ -45,18 +45,18 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org7353936">1. 笔记</a></li>
-<li><a href="#orgf824906">2. 推送</a></li>
-<li><a href="#orgfe241de">3. Git</a></li>
-<li><a href="#orgd342e29">4. XBox</a></li>
-<li><a href="#org95deb26">5. Bilibili</a></li>
+<li><a href="#org404a001">1. 笔记</a></li>
+<li><a href="#org9ccbe7e">2. 推送</a></li>
+<li><a href="#org6b58a78">3. Git</a></li>
+<li><a href="#org0a5adb6">4. XBox</a></li>
+<li><a href="#org02e90db">5. Bilibili</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org7353936" class="outline-2">
-<h2 id="org7353936"><span class="section-number-2">1.</span> <a href="#org7353936">笔记</a></h2>
+<div id="outline-container-org404a001" class="outline-2">
+<h2 id="org404a001"><span class="section-number-2">1.</span> <a href="#org404a001">笔记</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://github.com/xournalpp/xournalpp/">Xournal++</a> 支持数位板的开源笔记软件</li>
@@ -64,8 +64,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgf824906" class="outline-2">
-<h2 id="orgf824906"><span class="section-number-2">2.</span> <a href="#orgf824906">推送</a></h2>
+<div id="outline-container-org9ccbe7e" class="outline-2">
+<h2 id="org9ccbe7e"><span class="section-number-2">2.</span> <a href="#org9ccbe7e">推送</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><a href="https://ntfy.sh/">ntfy.sh</a> 一行 curl 即可使用的推送服务.
@@ -75,8 +75,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgfe241de" class="outline-2">
-<h2 id="orgfe241de"><span class="section-number-2">3.</span> <a href="#orgfe241de">Git</a></h2>
+<div id="outline-container-org6b58a78" class="outline-2">
+<h2 id="org6b58a78"><span class="section-number-2">3.</span> <a href="#org6b58a78">Git</a></h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><a href="https://gource.io/">Gource - a software version control visualization tool</a>
@@ -90,11 +90,11 @@
 </div>
 </div>
 
-<div id="outline-container-orgd342e29" class="outline-2">
-<h2 id="orgd342e29"><span class="section-number-2">4.</span> <a href="#orgd342e29">XBox</a></h2>
+<div id="outline-container-org0a5adb6" class="outline-2">
+<h2 id="org0a5adb6"><span class="section-number-2">4.</span> <a href="#org0a5adb6">XBox</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
-<li><a href="https://github.com/zhxie/pcap2socks">pcap2socks</a> 跨平台, 简易, 可以直接利用 SOCKS 代理的加速器
+<li><a href="https://github.com/zhxie/pcap2socks">pcap2socks</a> 跨平台, 简易, 可以直接利用 SOCKS 代理的加速器, 见<a href="../pcap2socks.html">使用 pcap2socks 加速 XBox</a>
 <ul class="org-ul">
 <li><a href="https://www.nbmao.com/archives/4240">Pcap2socks-直接利用 SOCKS 代理的游戏加速器</a></li>
 </ul></li>
@@ -102,8 +102,8 @@
 </div>
 </div>
 
-<div id="outline-container-org95deb26" class="outline-2">
-<h2 id="org95deb26"><span class="section-number-2">5.</span> <a href="#org95deb26">Bilibili</a></h2>
+<div id="outline-container-org02e90db" class="outline-2">
+<h2 id="org02e90db"><span class="section-number-2">5.</span> <a href="#org02e90db">Bilibili</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><a href="https://github.com/nICEnnnnnnnLee/BilibiliDown">BilibiliDown</a> 视频下载</li>
@@ -116,8 +116,8 @@
 <hr><table class="postamble">
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-12-02 20:18</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 21:20</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-12-05 21:48</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 21:51</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/tools.org">content/collections/tools.org</a></td></tr>
 </table>
