--- a/content/old/NewYear-2018.html
+++ b/content/old/NewYear-2018.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-05 21:20 -->
+<!-- 2022-12-05 21:51 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>New Year 2018</title>
@@ -44,7 +44,7 @@
 <h1 class="title">New Year 2018</h1>
 </header><hr style="width: 80%;">
 
-<figure id="org95861a8">
+<figure id="org78b0246">
 <img src="./NewYear-2018/1.png" alt="1.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure>
@@ -66,7 +66,7 @@
 </p>
 
 
-<figure id="org498d785">
+<figure id="orgd600a90">
 <img src="./NewYear-2018/2.png" alt="2.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure>
@@ -76,7 +76,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2018-00-00 00:00:00</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-05 21:18</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 21:20</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 21:51</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/old/NewYear-2018.org">content/old/NewYear-2018.org</a></td></tr>
 </table>
