--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-05 21:20 -->
+<!-- 2022-12-05 21:51 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>小渴栈</title>
@@ -47,7 +47,7 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org5c06473">1. 文章列表</a></li>
+<li><a href="#org492a2c5">1. 文章列表</a></li>
 </ul>
 </div>
 </nav>
@@ -57,18 +57,18 @@
 </p>
 
 <p>
-用 <a href="https://github.com/githubocto/repo-visualizer">repo-visualizer</a> 生成对 <a href="https://github.com/thebesttv/eserver-static">eserver-static</a> 的可视化, 如图 <a href="#org0b00768">1</a> 所示.
+用 <a href="https://github.com/githubocto/repo-visualizer">repo-visualizer</a> 生成对 <a href="https://github.com/thebesttv/eserver-static">eserver-static</a> 的可视化, 如图 <a href="#orgc5db682">1</a> 所示.
 </p>
 
 
-<figure id="org0b00768">
+<figure id="orgc5db682">
 <img src="./diagram.svg" alt="diagram.svg" class="org-svg" width="90%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>博客内容可视化</figcaption>
 </figure>
 
-<div id="outline-container-org5c06473" class="outline-2">
-<h2 id="org5c06473"><span class="section-number-2">1.</span> <a href="#org5c06473">文章列表</a></h2>
+<div id="outline-container-org492a2c5" class="outline-2">
+<h2 id="org492a2c5"><span class="section-number-2">1.</span> <a href="#org492a2c5">文章列表</a></h2>
 <div class="outline-text-2" id="text-1">
 <div data-pagefind-ignore="all">
 <ul class="org-ul">
@@ -76,6 +76,7 @@
 <li>content
 <ul class="org-ul">
 <li><a href="content/qq-group-export.html">导出QQ群成员</a></li>
+<li><a href="content/pcap2socks.html">使用 pcap2socks 加速 XBox</a></li>
 <li><a href="content/gadgets.html">我的小玩意们</a></li>
 <li>old
 <ul class="org-ul">
@@ -137,7 +138,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-25 09:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-27 21:44</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 21:20</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 21:51</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/index.org">index.org</a></td></tr>
 </table>
